[project]
name = "GfxLCD"
version = "0.8.5"
description = "gfxlcd is a lib for graphical lcds: ILI9328, SSD1306, SH1106, NJU6450, touch panel: AD7843 @ Raspberry Pi."
readme = "readme.md"
authors =[{name="Bartosz Kościów", email="kosci1@gmail.com"}]
license = { file = "LICENSE" }
classifiers=[
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Home Automation'
]
keywords=[
    'gfxlcd', 'raspberry pi', 'ili9328', 'ssd1306', 'nju6450', 'lcd', 'graphical lcd', 'touch panel', 'ad7843',
    'ili9486', 'xpt2046', 'ad7846', 'sh1106'
]

[project.urls]
Homepage = "https://github.com/bkosciow/gfxlcd"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
